--- a/lib-gedit-latex-icons.sty
+++ b/lib-gedit-latex-icons.sty
@@ -1,1 +1,242 @@
+% 
+% GEDIT-LaTeX-Plugin ICONS for LaTeX
+% 2023-04-18
+% 
+
+% マクロ定義  
+\def\@icon{\includegraphics[width=1em]}
+\def\@dir{/usr/share/gedit/plugins/latex/icons}
+
+% ICONS 
+\newcommand{\glabort}{\@icon{\@dir/abort.png}}
+\newcommand{\glbb}{\@icon{\@dir/bb.png}}
+\newcommand{\glbf}{\@icon{\@dir/bf.png}}
+\newcommand{\glbib}{\@icon{\@dir/bib.png}}
+\newcommand{\glbraces}{\@icon{\@dir/braces.png}}
+\newcommand{\glbrackets}{\@icon{\@dir/brackets.png}}
+\newcommand{\glbuildimage}{\@icon{\@dir/build-image.png}}
+\newcommand{\glcal}{\@icon{\@dir/cal.png}}
+\newcommand{\glcalendar}{\@icon{\@dir/calendar.png}}
+\newcommand{\glchapter}{\@icon{\@dir/chapter.png}}
+\newcommand{\glcloseenv}{\@icon{\@dir/close_env.png}}
+\newcommand{\gldescription}{\@icon{\@dir/description.png}}
+\newcommand{\gldisplaymath}{\@icon{\@dir/displaymath.png}}
+\newcommand{\gldocument}{\@icon{\@dir/document.png}}
+\newcommand{\gldocuments}{\@icon{\@dir/documents.png}}
+\newcommand{\gldvbars}{\@icon{\@dir/dvbars.png}}
+\newcommand{\glenumerate}{\@icon{\@dir/enumerate.png}}
+\newcommand{\gleqnarray}{\@icon{\@dir/eqnarray.png}}
+\newcommand{\glequation}{\@icon{\@dir/equation.png}}
+\newcommand{\glerror}{\@icon{\@dir/error.png}}
+\newcommand{\glfield}{\@icon{\@dir/field.png}}
+\newcommand{\glfrak}{\@icon{\@dir/frak.png}}
+\newcommand{\glgraphics}{\@icon{\@dir/graphics.png}}
+\newcommand{\glichoice}{\@icon{\@dir/i_choice.png}}
+\newcommand{\glicommand}{\@icon{\@dir/i_command.png}}
+\newcommand{\glit}{\@icon{\@dir/it.png}}
+\newcommand{\glitemize}{\@icon{\@dir/itemize.png}}
+\newcommand{\gljustifycenter}{\@icon{\@dir/justify-center.png}}
+\newcommand{\gljustifyleft}{\@icon{\@dir/justify-left.png}}
+\newcommand{\gljustifyright}{\@icon{\@dir/justify-right.png}}
+\newcommand{\gllabel}{\@icon{\@dir/label.png}}
+\newcommand{\gllisting}{\@icon{\@dir/listing.png}}
+\newcommand{\glmath}{\@icon{\@dir/math.png}}
+\newcommand{\glokay}{\@icon{\@dir/okay.png}}
+\newcommand{\gloutline}{\@icon{\@dir/outline.png}}
+\newcommand{\glparagraph}{\@icon{\@dir/paragraph.png}}
+\newcommand{\glparantheses}{\@icon{\@dir/parantheses.png}}
+\newcommand{\glpart}{\@icon{\@dir/part.png}}
+\newcommand{\glrm}{\@icon{\@dir/rm.png}}
+\newcommand{\glrun}{\@icon{\@dir/run.png}}
+\newcommand{\glsc}{\@icon{\@dir/sc.png}}
+\newcommand{\glsection}{\@icon{\@dir/section.png}}
+\newcommand{\glsf}{\@icon{\@dir/sf.png}}
+\newcommand{\glsnippet}{\@icon{\@dir/snippet.png}}
+\newcommand{\glsubsection}{\@icon{\@dir/subsection.png}}
+\newcommand{\glsubsubsection}{\@icon{\@dir/subsubsection.png}}
+\newcommand{\gltable}{\@icon{\@dir/table.png}}
+\newcommand{\gltask}{\@icon{\@dir/task.png}}
+\newcommand{\gltreechapter}{\@icon{\@dir/tree_chapter.png}}
+\newcommand{\gltreeinclude}{\@icon{\@dir/tree_include.png}}
+\newcommand{\gltreeincludegraphics}{\@icon{\@dir/tree_includegraphics.png}}
+\newcommand{\gltreeparagraph}{\@icon{\@dir/tree_paragraph.png}}
+\newcommand{\gltreepart}{\@icon{\@dir/tree_part.png}}
+\newcommand{\gltreesection}{\@icon{\@dir/tree_section.png}}
+\newcommand{\gltreesubsection}{\@icon{\@dir/tree_subsection.png}}
+\newcommand{\gltreesubsubsection}{\@icon{\@dir/tree_subsubsection.png}}
+\newcommand{\gltreetable}{\@icon{\@dir/tree_table.png}}
+\newcommand{\gltt}{\@icon{\@dir/tt.png}}
+\newcommand{\glunderline}{\@icon{\@dir/underline.png}}
+\newcommand{\gluneqnarray}{\@icon{\@dir/uneqnarray.png}}
+\newcommand{\glusers}{\@icon{\@dir/users.png}}
+\newcommand{\glvbars}{\@icon{\@dir/vbars.png}}
+\newcommand{\glwarning}{\@icon{\@dir/warning.png}}
+
+% 
+% FOLDERS
+% 
+% OPERATORS
+\newcommand{\glapprox}{\@icon{\@dir/operators/approx.png}}
+\newcommand{\glast}{\@icon{\@dir/operators/ast.png}}
+\newcommand{\glbullet}{\@icon{\@dir/operators/bullet.png}}
+\newcommand{\glcap}{\@icon{\@dir/operators/cap.png}}
+\newcommand{\glcdot}{\@icon{\@dir/operators/cdot.png}}
+\newcommand{\glcirc}{\@icon{\@dir/operators/circ.png}}
+\newcommand{\glcong}{\@icon{\@dir/operators/cong.png}}
+\newcommand{\glcup}{\@icon{\@dir/operators/cup.png}}
+\newcommand{\gldiv}{\@icon{\@dir/operators/div.png}}
+\newcommand{\glequiv}{\@icon{\@dir/operators/equiv.png}}
+\newcommand{\gleth}{\@icon{\@dir/operators/eth.png}}
+\newcommand{\glexists}{\@icon{\@dir/operators/exists.png}}
+\newcommand{\glforall}{\@icon{\@dir/operators/forall.png}}
+\newcommand{\glgeq}{\@icon{\@dir/operators/geq.png}}
+\newcommand{\glgg}{\@icon{\@dir/operators/gg.png}}
+\newcommand{\glin}{\@icon{\@dir/operators/in.png}}
+\newcommand{\glland}{\@icon{\@dir/operators/land.png}}
+\newcommand{\glleq}{\@icon{\@dir/operators/leq.png}}
+\newcommand{\glll}{\@icon{\@dir/operators/ll.png}}
+\newcommand{\gllor}{\@icon{\@dir/operators/lor.png}}
+\newcommand{\glmid}{\@icon{\@dir/operators/mid.png}}
+\newcommand{\glnabla}{\@icon{\@dir/operators/nabla.png}}
+\newcommand{\glneg}{\@icon{\@dir/operators/neg.png}}
+\newcommand{\glneq}{\@icon{\@dir/operators/neq.png}}
+\newcommand{\glnexists}{\@icon{\@dir/operators/nexists.png}}
+\newcommand{\glni}{\@icon{\@dir/operators/ni.png}}
+\newcommand{\gloplus}{\@icon{\@dir/operators/oplus.png}}
+\newcommand{\glparallel}{\@icon{\@dir/operators/parallel.png}}
+\newcommand{\glperp}{\@icon{\@dir/operators/perp.png}}
+\newcommand{\glpartial}{\@icon{\@dir/operators/partial.png}}
+\newcommand{\glpm}{\@icon{\@dir/operators/pm.png}}
+\newcommand{\glpropto}{\@icon{\@dir/operators/propto.png}}
+\newcommand{\glsetminus}{\@icon{\@dir/operators/setminus.png}}
+\newcommand{\glsim}{\@icon{\@dir/operators/sim.png}}
+\newcommand{\glsimeq}{\@icon{\@dir/operators/simeq.png}}
+\newcommand{\glstar}{\@icon{\@dir/operators/star.png}}
+\newcommand{\glsubset}{\@icon{\@dir/operators/subset.png}}
+\newcommand{\glsubseteq}{\@icon{\@dir/operators/subseteq.png}}
+\newcommand{\glsupset}{\@icon{\@dir/operators/supset.png}}
+\newcommand{\glsupseteq}{\@icon{\@dir/operators/supseteq.png}}
+\newcommand{\gltimes}{\@icon{\@dir/operators/times.png}}
+\newcommand{\gluplus}{\@icon{\@dir/operators/uplus.png}}
+\newcommand{\glvarnothing}{\@icon{\@dir/operators/varnothing.png}}
+
+% ARROWS
+\newcommand{\glLeftarrow}{\@icon{\@dir/arrows/Leftarrow.png}}
+\newcommand{\glLeftrightarrow}{\@icon{\@dir/arrows/Leftrightarrow.png}}
+\newcommand{\glLongleftarrow}{\@icon{\@dir/arrows/Longleftarrow.png}}
+\newcommand{\glLongleftrightarrow}{\@icon{\@dir/arrows/Longleftrightarrow.png}}
+\newcommand{\glLongrightarrow}{\@icon{\@dir/arrows/Longrightarrow.png}}
+\newcommand{\glRightarrow}{\@icon{\@dir/arrows/Rightarrow.png}}
+\newcommand{\glhookleftarrow}{\@icon{\@dir/arrows/hookleftarrow.png}}
+\newcommand{\glhookrightarrow}{\@icon{\@dir/arrows/hookrightarrow.png}}
+\newcommand{\glleadsto}{\@icon{\@dir/arrows/leadsto.png}}
+\newcommand{\glleftarrow}{\@icon{\@dir/arrows/leftarrow.png}}
+\newcommand{\glleftharpoondown}{\@icon{\@dir/arrows/leftharpoondown.png}}
+\newcommand{\glleftharpoonup}{\@icon{\@dir/arrows/leftharpoonup.png}}
+\newcommand{\glleftrightarrow}{\@icon{\@dir/arrows/leftrightarrow.png}}
+\newcommand{\glleftrightarrows}{\@icon{\@dir/arrows/leftrightarrows.png}}
+\newcommand{\glleftrightharpoons}{\@icon{\@dir/arrows/leftrightharpoons.png}}
+\newcommand{\gllongleftarrow}{\@icon{\@dir/arrows/longleftarrow.png}}
+\newcommand{\gllongleftrightarrow}{\@icon{\@dir/arrows/longleftrightarrow.png}}
+\newcommand{\gllongmapsto}{\@icon{\@dir/arrows/longmapsto.png}}
+\newcommand{\gllongrightarrow}{\@icon{\@dir/arrows/longrightarrow.png}}
+\newcommand{\glmapsto}{\@icon{\@dir/arrows/mapsto.png}}
+\newcommand{\glrightarrow}{\@icon{\@dir/arrows/rightarrow.png}}
+\newcommand{\glrightharpoondown}{\@icon{\@dir/arrows/rightharpoondown.png}}
+\newcommand{\glrightharpoonup}{\@icon{\@dir/arrows/rightharpoonup.png}}
+\newcommand{\glrightleftarrows}{\@icon{\@dir/arrows/rightleftarrows.png}}
+\newcommand{\glrightleftharpoons}{\@icon{\@dir/arrows/rightleftharpoons.png}}
+
+% LIMITERS
+\newcommand{\gllbrace}{\@icon{\@dir/limiters/lbrace.png}}
+\newcommand{\glrbrace}{\@icon{\@dir/limiters/rbrace.png}}
+\newcommand{\gllangle}{\@icon{\@dir/limiters/langle.png}}
+\newcommand{\glrangle}{\@icon{\@dir/limiters/rangle.png}}
+\newcommand{\gllfloor}{\@icon{\@dir/limiters/lfloor.png}}
+\newcommand{\glrfloor}{\@icon{\@dir/limiters/rfloor.png}}
+\newcommand{\gllceil}{\@icon{\@dir/limiters/lceil.png}}
+\newcommand{\glrceil}{\@icon{\@dir/limiters/rceil.png}}
+\newcommand{\glvert}{\@icon{\@dir/limiters/vert.png}}
+\newcommand{\glVert}{\@icon{\@dir/limiters/Vert.png}}
+
+% GREEK
+\newcommand{\glalpha}{\@icon{\@dir/greek/alpha.png}}
+\newcommand{\glbeta}{\@icon{\@dir/greek/beta.png}}
+\newcommand{\glgamma}{\@icon{\@dir/greek/gamma.png}}
+\newcommand{\gldelta}{\@icon{\@dir/greek/delta.png}}
+\newcommand{\glepsilon}{\@icon{\@dir/greek/epsilon.png}}
+\newcommand{\glvarepsilon}{\@icon{\@dir/greek/varepsilon.png}}
+\newcommand{\glzeta}{\@icon{\@dir/greek/zeta.png}}
+\newcommand{\gleta}{\@icon{\@dir/greek/eta.png}}
+\newcommand{\gltheta}{\@icon{\@dir/greek/theta.png}}
+\newcommand{\glvartheta}{\@icon{\@dir/greek/vartheta.png}}
+\newcommand{\gliota}{\@icon{\@dir/greek/iota.png}}
+\newcommand{\glkappa}{\@icon{\@dir/greek/kappa.png}}
+\newcommand{\gllambda}{\@icon{\@dir/greek/lambda.png}}
+\newcommand{\glmu}{\@icon{\@dir/greek/mu.png}}
+\newcommand{\glnu}{\@icon{\@dir/greek/nu.png}}
+\newcommand{\glxi}{\@icon{\@dir/greek/xi.png}}
+\newcommand{\glpi}{\@icon{\@dir/greek/pi.png}}
+\newcommand{\glvarpi}{\@icon{\@dir/greek/varpi.png}}
+\newcommand{\glrho}{\@icon{\@dir/greek/rho.png}}
+\newcommand{\glvarrho}{\@icon{\@dir/greek/varrho.png}}
+\newcommand{\glsigma}{\@icon{\@dir/greek/sigma.png}}
+\newcommand{\glvarsigma}{\@icon{\@dir/greek/varsigma.png}}
+\newcommand{\gltau}{\@icon{\@dir/greek/tau.png}}
+\newcommand{\glupsilon}{\@icon{\@dir/greek/upsilon.png}}
+\newcommand{\glphi}{\@icon{\@dir/greek/phi.png}}
+\newcommand{\glvarphi}{\@icon{\@dir/greek/varphi.png}}
+\newcommand{\glchi}{\@icon{\@dir/greek/chi.png}}
+\newcommand{\glpsi}{\@icon{\@dir/greek/psi.png}}
+\newcommand{\glomega}{\@icon{\@dir/greek/omega.png}}
+\newcommand{\glGamma}{\@icon{\@dir/greek/Gamma.png}}
+\newcommand{\glDelta}{\@icon{\@dir/greek/Delta.png}}
+\newcommand{\glTheta}{\@icon{\@dir/greek/Theta.png}}
+\newcommand{\glLambda}{\@icon{\@dir/greek/Lambda.png}}
+\newcommand{\glXi}{\@icon{\@dir/greek/Xi.png}}
+\newcommand{\glPi}{\@icon{\@dir/greek/Pi.png}}
+\newcommand{\glSigma}{\@icon{\@dir/greek/Sigma.png}}
+\newcommand{\glUpsilon}{\@icon{\@dir/greek/Upsilon.png}}
+\newcommand{\glPhi}{\@icon{\@dir/greek/Phi.png}}
+\newcommand{\glPsi}{\@icon{\@dir/greek/Psi.png}}
+\newcommand{\glOmega}{\@icon{\@dir/greek/Omega.png}}
+
+% SPECIAL
+\newcommand{\glldots}{\@icon{\@dir/special/ldots.png}}
+\newcommand{\glcdots}{\@icon{\@dir/special/cdots.png}}
+\newcommand{\glvdots}{\@icon{\@dir/special/vdots.png}}
+\newcommand{\glddots}{\@icon{\@dir/special/ddots.png}}
+\newcommand{\glIm}{\@icon{\@dir/special/Im.png}}
+\newcommand{\glRe}{\@icon{\@dir/special/Re.png}}
+\newcommand{\glcomplement}{\@icon{\@dir/special/complement.png}}
+\newcommand{\glhbar}{\@icon{\@dir/special/hbar.png}}
+\newcommand{\glinfty}{\@icon{\@dir/special/infty.png}}
+\newcommand{\glS}{\@icon{\@dir/special/S.png}}
+\newcommand{\gltextcopyright}{\@icon{\@dir/special/textcopyright.png}}
+\newcommand{\gltextregistered}{\@icon{\@dir/special/textregistered.png}}
+\newcommand{\gltexttrademark}{\@icon{\@dir/special/texttrademark.png}}
+\newcommand{\glP}{\@icon{\@dir/special/P.png}}
+\newcommand{\gldagger}{\@icon{\@dir/special/dagger.png}}
+\newcommand{\glwp}{\@icon{\@dir/special/wp.png}}
+\newcommand{\glaleph}{\@icon{\@dir/special/aleph.png}}
+\newcommand{\glangle}{\@icon{\@dir/special/angle.png}}
+\newcommand{\glprime}{\@icon{\@dir/special/prime.png}}
+\newcommand{\glell}{\@icon{\@dir/special/ell.png}}
+\newcommand{\glsum}{\@icon{\@dir/special/sum.png}}
+\newcommand{\glprod}{\@icon{\@dir/special/prod.png}}
+\newcommand{\glint}{\@icon{\@dir/special/int.png}}
+\newcommand{\gliint}{\@icon{\@dir/special/iint.png}}
+\newcommand{\gloint}{\@icon{\@dir/special/oint.png}}
+
+% ACCENTS
+\newcommand{\gldot}{\@icon{\@dir/accents/dot.png}}
+\newcommand{\glddot}{\@icon{\@dir/accents/ddot.png}}
+\newcommand{\glbar}{\@icon{\@dir/accents/bar.png}}
+\newcommand{\gltilde}{\@icon{\@dir/accents/tilde.png}}
+\newcommand{\glvec}{\@icon{\@dir/accents/vec.png}}
+\newcommand{\glhat}{\@icon{\@dir/accents/hat.png}}
+\newcommand{\glacute}{\@icon{\@dir/accents/acute.png}}
+\newcommand{\glgrave}{\@icon{\@dir/accents/grave.png}}
+\newcommand{\glbreve}{\@icon{\@dir/accents/breve.png}}
+\newcommand{\glcheck}{\@icon{\@dir/accents/check.png}}
 
