--- a/lib-gedit-latex-icons.sty
+++ b/lib-gedit-latex-icons.sty
@@ -73,7 +73,7 @@
 \newcommand{\glwarning}{\@icon{\@dir/warning.png}}
 
 % 
-% FOLDERS
+% CATEGORIES
 % 
 % OPERATORS
 \newcommand{\glapprox}{\@icon{\@dir/operators/approx.png}}
